--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
             { id: 3, title: "World's Smallest Violin", artist: "AJR", cover: "https://i.ytimg.com/vi/MiKkH48P8g8/hq720.jpg", fileName: "World's Smallest Violin.m4a", isExplicit: true },
             { id: 4, title: "SICKO MODE", artist: "Travis Scott", cover: "https://i.ytimg.com/vi/d-JBBNg8YKs/hq720.jpg", fileName: "SICKO MODE.m4a", isExplicit: true },
             { id: 5, title: "Wish", artist: "Diplo (ft. Trippie Redd)", cover: "https://i.ytimg.com/vi/ZpQAwGHI29A/hq720.jpg", fileName: "Wish.m4a", isExplicit: true },
+            { id: 5, title: "Loonboon", artist: "supershigi", cover: "https://i.ytimg.com/vi/lr4vi_XAjQQ/hq720.jpg", fileName: "Loonboon.m4a", isExplicit: false },
         ];
 
         function makeCard(song) {
